# CCInclusiveNuMuTargets

./: CMakeLists.txt  Extract1DCrossSectionTargets copy2.cpp  Extract1DCrossSectionTargets-Original.cpp  Extract1DCrossSectionTargets.cpp  Extract1DCrossSectionTargets_ByMaterial.cpp  Extract1DCrossSectionTargets_ByTarget.cpp  Extract1DCrossSectionTargets_ByTargetNew.cpp  Extract1DCrossSectionTargets_PseudoTargetsSummed.cpp  Extract1DCrossSectionTracker-Original.cpp  Extract1DCrossSectionTracker.cpp  Extract1DCrossSectionTrackerDaisy.cpp  Extract1DCrossSectionTrackerNew.cpp  Extract1DCrossSectionTracker_.cpp  Extract2DCrossSectionTargets.cpp  Extract2DCrossSectionTracker.cpp  Extract2DCrossSectionTrackerDaisy.cpp  Extract2DCrossSectionTrackerNew.cpp  MergeHistograms.sh  SidebandTuning.py  TargetRegionValidationNew.cpp  TempExtract1DCrossSectionTargets.cpp  mypatch.patch  runEventLoop.cpp  runEventLoopFullDet.cpp  runEventLoopTargets.cpp  runEventLoopTargets2DMigration.cpp  runEventLoopTargetsNew.cpp  runEventLoopTracker.cpp  runEventLoopTracker2.cpp  runEventLoopTrackerDSWater.cpp  runEventLoopTrackerDaisy.cpp  runEventLoopTrackerUSWater.cpp  runEventLoopValidations.cpp  runEventLoopValidationsNew.cpp  runTransWarp.sh  runXSecLooper.cpp  runXSecLooper1DTargets.cpp  runXSecLooper1DTracker.cpp  runXSecLooper2DTracker.cpp  runXSecLooperTargets_ByPseudotarget.cpp  (+4 more)
PlaylistFiles/me-playlists/: DataPlaylist.txt  MC-noDorM.txt  MCPlaylist.txt
PlaylistFiles/me-playlists-anu/Data/: 6A-Data.txt  6B-Data.txt  6C-Data.txt  6D-Data.txt  6E-Data.txt  6F-Data.txt  6G-Data.txt  6H-Data.txt  6I-Data.txt  6J-Data.txt  Test-Data.txt
PlaylistFiles/me-playlists-anu/MC/: 6A-MC.txt  6B-MC.txt  6C-MC.txt  6D-MC.txt  6E-MC.txt  6F-MC.txt  6G-MC.txt  6H-MC.txt  6I-MC.txt  6J-MC.txt  Test-MC.txt
PlaylistFiles/me-playlists/Data/: 1A-Data.txt  1A1B1C1D1E1F-Data.txt  1B-Data.txt  1C-Data.txt  1D-Data.txt  1E-Data.txt  1F-Data.txt  1G-Data.txt  1L-Data.txt  1M-Data.txt  1N-Data.txt  1O-Data.txt  1P-Data.txt  Test-Data.txt  Test1D-Data.txt  Test1L-Data.txt
PlaylistFiles/me-playlists/Data-ODP/: 1A-Data.txt  1B-Data.txt  1C-Data.txt  1D-Data.txt  1E-Data.txt  1F-Data.txt  1G-Data.txt  1L-Data.txt  1M-Data.txt  1N-Data.txt  1O-Data.txt  1P-Data.txt  Test1A-Data.txt  Test1N-Data.txt  Test1O-Data.txt
PlaylistFiles/me-playlists/DataP4/: 1A-Data.txt  1A1B1C1D1E1F-Data.txt  1B-Data.txt  1C-Data.txt  1D-Data.txt  1E-Data.txt  1F-Data.txt  1G-Data.txt  1L-Data.txt  1M-Data.txt  1N-Data.txt  1O-Data.txt  1P-Data.txt  5A-Data.txt  6A-Data.txt  6B-Data.txt  6C-Data.txt  6D-Data.txt  6E-Data.txt  6F-Data.txt  6G-Data.txt  6H-Data.txt  6I-Data.txt  6J-Data.txt  CombinedEmpty-Data.txt  CombinedEmptyShort-Data.txt  CombinedFilled-Data.txt  CombinedFilledShort-Data.txt  Test1A-Data.txt  Test1D-Data.txt  Test1L-Data.txt  Test1O-Data.txt  Test6A-Data.txt
PlaylistFiles/me-playlists/DataP6/: 1A-Data.txttmp0.txt  5A-Data.txt  6A-Data.txt  6B-Data.txt  6C-Data.txt  6D-Data.txt  6E-Data.txt  6F-Data.txt  6G-Data.txt  6H-Data.txt  6I-Data.txt  6J-Data.txt  CombinedEmpty-Data.txt  CombinedEmptyShort-Data.txt  CombinedFilled-Data.txt  CombinedFilledShort-Data.txt  Test1A-Data.txt  Test1B-Data.txt  Test1N-Data.txt  Test1O-Data.txt  Test6A-Data.txt
PlaylistFiles/me-playlists/MC/: 1A-MC.txt  1B-MC.txt  1C-MC.txt  1D-MC.txt  1E-MC.txt  1F-MC.txt  1G-MC.txt  1L-MC.txt  1M-MC.txt  1N-MC.txt  1O-MC.txt  1P-MC.txt  Test-MC.txt  Test1C-MC.txt  Test1D-MC.txt  Test1L-MC.txt  WaterEmpty-MC.txt  WaterFilled-MC.txt
PlaylistFiles/me-playlists/MC-ODP/: 1A-MC.txt  1B-MC.txt  1C-MC.txt  1D-MC.txt  1E-MC.txt  1F-MC.txt  1G-MC.txt  1L-MC.txt  1M-MC.txt  1N-MC.txt  1O-MC.txt  1P-MC.txt  Test1A-MC.txt  Test1N-MC.txt  Test1O-MC.txt
PlaylistFiles/me-playlists/MCP4/: 1A-MC.txt  1A1B1C1D1E1F-MC.txt  1B-MC.txt  1C-MC.txt  1D-MC.txt  1E-MC.txt  1F-MC.txt  1G-MC.txt  1L-MC.txt  1M-MC.txt  1N-MC.txt  1O-MC.txt  1P-MC.txt  5A-MC.txt  6A-MC.txt  6B-MC.txt  6C-MC.txt  6D-MC.txt  6E-MC.txt  6F-MC.txt  6G-MC.txt  6H-MC.txt  6I-MC.txt  6J-MC.txt  CombinedEmpty-MC.txt  CombinedEmptyShort-MC.txt  CombinedFilled-MC.txt  CombinedFilledShort-MC.txt  Test1A-MC.txt  Test1C-MC.txt  Test1D-MC.txt  Test1L-MC.txt  Test1O-MC.txt  Test6A-MC.txt  WaterEmpty-MC.txt  WaterFilled-MC.txt
PlaylistFiles/me-playlists/MCP6/: 5A-MC.txt  6A-MC.txt  6B-MC.txt  6C-MC.txt  6D-MC.txt  6E-MC.txt  6F-MC.txt  6G-MC.txt  6H-MC.txt  6I-MC.txt  6J-MC.txt  CombinedEmpty-MC.txt  CombinedEmptyShort-MC.txt  CombinedFilled-MC.txt  CombinedFilledShort-MC.txt  Test1A-MC.txt  Test1B-MC.txt  Test1N-MC.txt  Test1O-MC.txt  Test6A-MC.txt
PlaylistFiles/me-playlists/MCP6Star/: 1N-MC.txt
bootstrap/: CMakeLists.txt
cuts/: CCInclCuts.h  SignalDefinition.h
event/: CVUniverse.h
gridScripts/: gridEventloop.py  gridEventloopTargets.py  gridEventloopTracker.py  gridEventloopValidations.py  gridExtractxsec.py  gridExtractxsec2.py  gridXseclooper.py  gridXsecloopermat.py
studies/: PerEventVarByGENIELabel2D.h  PlasticSideband2DData.h  PlasticSideband2DMC.h  PseudoTargetIntOrigin2D.h  WaterTargetIntOrigin2D.h
systematics/: Systematics.h
util/: COHPionReweighter.h  DiffractiveReweighter.h  GetFluxIntegral.cpp  GetFluxIntegral.h  NukeUtils.h  PlasticSidebands.h  Variable.h  Variable1DNuke.h  Variable1DNukeNew.h  Variable2D.h  Variable2DNuke.h  Variable2DNukeNew.h  Variable2DTracker.h
